listview fixes on mobile fixed listview getting cropped on small displays

--- a/src/components/RenderRouter/HomeChurchItem.scss
+++ b/src/components/RenderRouter/HomeChurchItem.scss
@@ -1,5 +1,8 @@
 @import '../../theme';
 
+.LoadingMargin {
+  max-height: 55vh;
+}
 .HomeChurchFormItemContainer {
   display: flex;
   flex-direction: column;
